# local-llm

./: README.md  docker-compose.yml
langchain/: Dockerfile  pyproject.toml  serve.py
ollama/: start-ollama.sh
web/: package-lock.json  package.json
web/src/routes/: +page.svelte
