[tool.poetry]
name = "langchain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-ollama = "^0.2.0"
langchain-core = "^0.3.6"
langserve = "^0.3.0"
fastapi = "^0.115.0"
sse-starlette = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
